# WBCKits

./: CMakeLists.txt  Readme.md
include/: WBCKits.hpp
include/WBCKits/: constraint.h  ghc.h  hqp.h  options.h  rhp.h  task.h  types.hpp  wbc_base.h  wqp.h
python/: WBCKits.pyx  cWBCKits.pxd  setup.py  test.py
src/: constraint.cpp  ghc.cpp  hqp.cpp  options.cpp  rhp.cpp  task.cpp  wbc_base.cpp  wqp.cpp
test/: CMakeLists.txt  ghc_test.cpp  hqp_test.cpp  rhp_test.cpp  wqp_test.cpp
